--- a/simple-http-server-boshrelease/config/final.yml
+++ b/simple-http-server-boshrelease/config/final.yml
@@ -1,1 +1,6 @@
-name: simple-http-server-boshrelease
+---
+blobstore:
+  provider: local
+  options:
+    blobstore_path: /tmp/simple-http-server
+final_name: simple-http-server
