Added hoow to deploy & expected result

--- a/simple-http-server-boshrelease/manifest/simple-http-server.yml
+++ b/simple-http-server-boshrelease/manifest/simple-http-server.yml
@@ -1,3 +1,6 @@
+
+#To deploy: bosh -e vbox -n -d simple-http-server deploy manifest/manifest.yml
+#curl Ip of instance:8080
 name: simple-http-server
 
 releases:
